ajustes html e css

--- a/templates/index.html
+++ b/templates/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gerenciador de Datas Importantes</title>
+    <title>Gerenciador de Datas</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
 </head>
 <body>
     <div class="container">
-        <h1>Gerenciador de Datas Importantes</h1>
+        <h1>Gerenciador de Datas</h1>
 
         <div class="section">
             <h2>Registrar Nova Pessoa</h2>
