--- a/templates/index.html
+++ b/templates/index.html
@@ -61,11 +61,9 @@
                     {% endfor %}
                 </tbody>
             </table>
-        </div>
+        </div> 
 
-        {# REMOVIDO: O div.client-section-group que envolvia as seções de cliente #}
-
-        <div class="section" id="registroClienteSection"> {# NOVO ID AQUI para controlar a margem #}
+        <div class="section" id="registroClienteSection">
             <h2>Registrar Novo Cliente</h2>
             <form id="registroClienteForm">
                 <div class="form-group">
@@ -106,9 +104,6 @@
             </table>
         </div>
 
-    </div>
-
-    {# --- Modais (sem alteração) --- #}
     <div id="editFuncionarioModal" class="modal">
         <div class="modal-content">
             <span class="close-button funcionario">&times;</span>
